# ChaliceUserScoring

./: .gitignore  Catboost_SMOTE.py  README.md  TTD_user_score_upload.py  UserScoring.py  ltv_model.py  ltv_params.py  main.py  run_ltv_pred.py  setup.cfg
ChaliceUserScoring/: UserScoring.py
ChaliceUserScoring.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ChaliceUserScoring/Utils/: Catboost_SMOTE.py  TTD_user_score_upload.py  ltv_model.py  run_ltv_pred.py
Utils/: TTD_user_score_upload.py  ltv_model.py
