[metadata]
name = ChaliceUserScoring
version = 0.0.29
author = Tylynn pettrey
author_email = tylynn@chalice.ai
description = Common functions for User Scoring
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chaliceai/ChaliceAPIUsage.git
project_urls =
    Bug Tracker = https://chalice.ai
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy
    shap
    seaborn
    catboost
    snowflake-connector-python[pandas]==2.7.9
    scikit-learn
    imbalanced-learn
    boto3
    IPython
    # ChaliceAPIUsage @   git+ssh://git@github.com/chaliceai/ChaliceAPIUsage.git@master